namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-external-users-api-stage/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-external-users-api-stage
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "stage"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-auth-audit-registers"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/application: "HMPPS exteral users api"
    cloud-platform.justice.gov.uk/owner: "HMPPS Auth: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-external-users-api.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-auth-audit-registers"
